--- a/documentation/OrientDb/3. Guia rapida y comandos.md
+++ b/documentation/OrientDb/3. Guia rapida y comandos.md
@@ -54,8 +54,8 @@ VALUES
 (Pablo, Salamanca, 33)
 (Maria, Torres, 27)
 
-## Eliminar un nodo mediante su rid
-DELETE Pepe @27:55;
+## Borrar un registro/nodo especifico
+DELETE VERTEX #27:55;
 
 ## Alterar/cambiar la ubicacion de un nodo
 UPDATE #26:55 SET in = #26:16;
