--- a/documentation/OrientDb/4. Importacion de bases.md
+++ b/documentation/OrientDb/4. Importacion de bases.md
@@ -1,4 +1,4 @@
-# Importar bases de datos
+# Importar bases de datos orientdb
 a- En la carpeta donde estaba el iniciador del server tambien observara una terminal llamada 'console'
 b- abra la consola del tipo 'Archivos locales' si es usuario de windows
 c- Deberia mirar en la terminal color negro el mensaje: orientdb>
@@ -12,8 +12,12 @@ Ejemplo > Import database c:/Users/My_user/Downloads/Estudiantes_Profecionales.g
 Nota: OrientDB espera que el archivo de importación sea un archivo generado con el comando EXPORT DATABASE de OrientDB. 
 Este archivo suele tener un formato .gz o .export , por lo que el import no funciona con archivos convencionales .json
 
-# Ingresar un archivo convencional .json 
-a- Al usar Mongo u otras DB NoSql hay que usar un sistema de importación basado en pipelines de ETL que nos permitan extraer la informacion 
-b- La configuración de la pipeline de importación utiliza el ETL para transformar el archivo JSON en vértices y aristas
-c-
-c- Tutorial de como importar bases https://orientdb.com/docs/2.2.x/Import-the-Database-of-Beers.html 
+# Ingresar un archivo convencional .json .csv (entre otros)
+a- Al usar Mongo u otras DB  hay que usar un sistema de importación basado en pipelines de ETL que nos permitan extraer la informacion que necesitamos
+b- La configuración de la pipeline de importación utiliza ETL para transformar el archivo .JSON u otros en una coleccion de vértices y aristas
+c- A su archivo debe ponerle como introduccion los comandos del ETL segun el tipo de archivo
+d- Ver los tipos de archivos: https://orientdb.com/docs/2.2.x/Import-the-Database-of-Beers.html 
+e- Hacer la introduccion al archivo que desea importar
+f- Abra el archivo ya configurado usando la herramienta oetl.sh  ubicada en el folder 'bin' de orientdb
+
+
