--- a/documentation/OrientDb/1. Objetivos e Instalacion.md
+++ b/documentation/OrientDb/1. Objetivos e Instalacion.md
@@ -27,7 +27,7 @@ Se plantea utilizar las bases de datos OrientDB y AragonDB, comparando facilidad
 10. En Windows, abre Editar las variables del entorno del sistema > variables del sistema > nueva > Nombre de la variable: ORIENTDB_HOME > Valor de la variable: C: ruta/de/orientDB
 11. En la misma sección de Variables del sistema > path > nuevo > C: ruta/de/orient/hasta/bin
 12. En la terminal de CMD, ejecuta el comando echo %ORIENTDB_HOME%  para verificar que te devuelva la ubicación de OrientDB.
-13. En la misma sección de Variables del sistema, crea otra nueva variable > variables del sistema > nueva > Nombre de la variable: JAVA_HOME > Valor de la variable: C: ruta/de/java
+13. En la misma sección de Variables del sistema, crea otra nueva variable > variables del sistema > nueva > Nombre de la variable: JAVA_HOME > Valor de la variable: C: ruta/de/ java/java_17
 14. En la misma sección de Variables del sistema > path > nuevo > %JAVA_HOME%\bin;%PATH%
 15. Abre la carpeta bin de OrientDB y ejecuta el servidor. Te pedirá una contraseña para el usuario: *1234 // 1234
 16. Una vez configurada la contraseña, verás el mensaje OrientDB Server is active. > Abra internet > Coloque en el buscador: 
