cambios en documentacion

--- a/documentation/OrientDb/3. Guia rapida y comandos.md
+++ b/documentation/OrientDb/3. Guia rapida y comandos.md
@@ -98,3 +98,22 @@ WHERE out IN (
     FROM estudiantes
     WHERE Edad_cumplida = 23
 )
+
+Ejemplo 3
+
+select * from estudiantes
+
+select * from profesionales
+
+SELECT * 
+FROM colabora_estudiante
+WHERE out IN (
+    SELECT *
+    FROM estudiantes 
+    WHERE Edad_cumplida = 21
+) 
+AND in IN (
+    SELECT *
+    FROM profesionales
+    WHERE Institucion = 'Universidad de Costa Rica'
+)  ;
