--- a/documentation/OrientDb/4. Importacion de bases.md
+++ b/documentation/OrientDb/4. Importacion de bases.md
@@ -1,23 +1,27 @@
 # Importar bases de datos orientdb
-a- En la carpeta donde estaba el iniciador del server tambien observara una terminal llamada 'console'
-b- abra la consola del tipo 'Archivos locales' si es usuario de windows
-c- Deberia mirar en la terminal color negro el mensaje: orientdb>
-d- CONNECT remote:localhost/nombreDB root contraseña --CARGAR LOS REGISTROS EN UNA BASE YA HECHA--
-e- CCREATE DATABASE remote:localhost/nombreDB root 1234 plocal graph --CREAR UNA NUEVA BASE PARA LOS REGISTROS-- --Las contraseñas deben tener largo maximo 4--
-f- ahora vera el nombre: orientdb {nombreDB}>
-d- IMPORT DATABASE C:RUTA/DEL/ARCHIVO/COMPRIMIDO.gz -preserveClusterIDs=true
+1- En la carpeta donde estaba el iniciador del server tambien observara una terminal llamada 'console'
+2- abra la consola del tipo 'Archivos locales' si es usuario de windows
+3- Deberia mirar en la terminal color negro el mensaje: orientdb>
+4- CONNECT remote:localhost/nombreDB root contraseña --CARGAR LOS REGISTROS EN UNA BASE YA HECHA--
+5- CCREATE DATABASE remote:localhost/nombreDB root 1234 plocal graph --CREAR UNA NUEVA BASE PARA LOS REGISTROS-- --Las contraseñas deben tener largo maximo 4--
+6- ahora vera el nombre: orientdb {nombreDB}>
+7- IMPORT DATABASE C:RUTA/DEL/ARCHIVO/COMPRIMIDO.gz -preserveClusterIDs=true
 
 Ejemplo > Import database c:/Users/My_user/Downloads/Estudiantes_Profecionales.gz -preserveClusterIDs=true
 
 Nota: OrientDB espera que el archivo de importación sea un archivo generado con el comando EXPORT DATABASE de OrientDB. 
 Este archivo suele tener un formato .gz o .export , por lo que el import no funciona con archivos convencionales .json
 
+# Tiene una carpeta con la base de datos
+1- Copie la carpeta ubicada en data > OrientDB > Estudiantes_Profecionales
+2- Peguela en la carpeta "database" ubicada en dentro del folder OrientDB 
+
 # Ingresar un archivo convencional .json .csv (entre otros)
-a- Al usar Mongo u otras DB  hay que usar un sistema de importación basado en pipelines de ETL que nos permitan extraer la informacion que necesitamos
-b- La configuración de la pipeline de importación utiliza ETL para transformar el archivo .JSON u otros en una coleccion de vértices y aristas
-c- A su archivo debe ponerle como introduccion los comandos del ETL segun el tipo de archivo
-d- Ver los tipos de archivos: https://orientdb.com/docs/2.2.x/Import-the-Database-of-Beers.html 
-e- Hacer la introduccion al archivo que desea importar
-f- Abra el archivo ya configurado usando la herramienta oetl.sh  ubicada en el folder 'bin' de orientdb
+1- Al usar Mongo u otras DB  hay que usar un sistema de importación basado en pipelines de ETL que nos permitan extraer la informacion que necesitamos
+2- La configuración de la pipeline de importación utiliza ETL para transformar el archivo .JSON u otros en una coleccion de vértices y aristas
+3- A su archivo debe ponerle como introduccion los comandos del ETL segun el tipo de archivo
+4- Ver los tipos de archivos: https://orientdb.com/docs/2.2.x/Import-the-Database-of-Beers.html 
+5- Hacer la introduccion al archivo que desea importar
+6- Abra el archivo ya configurado usando la herramienta oetl.sh  ubicada en el folder 'bin' de orientdb
 
 
