Update 1. Objetivos e Instalacion.md
Cambiando Estilos

--- a/documentation/OrientDb/1. Objetivos e Instalacion.md
+++ b/documentation/OrientDb/1. Objetivos e Instalacion.md
@@ -1,4 +1,10 @@
 # OrientDB
+
+<p align="center" width="300">
+   <img align="center" width="200" src="https://raw.githubusercontent.com/docker-library/docs/aa4e1c37afc16c4631e2272c1b5e2fe8e25e829c/orientdb/logo.png" />
+   <h3 align="center"> Somos la mejor opción para tus proyectos 🤖💻</h3>
+</p>
+
 # Objetivo General
 Desarrollar una base de datos que promueva la interacción entre profesionales de diversas áreas, facilitando el intercambio de conocimientos y fomentando la colaboración en proyectos conjuntos.
 
